# ai-python

./: .gitignore  3-gen-AI.md  readme.md
contents/: 1-AI-intro.md  2-tech-stack-AI.md
python-code/: 1-syntax.py  5-simple-api.py  9-simple-api.py  pyproject.toml  readme.md
python-code/1-syntax/: 1-syntax.py  readme.md
python-code/1-syntax/mathUtils/: results.py
python-code/1-syntax/scripts/: fibo.py
python-code/2-llmRag/: .gitignore  RAG-article.md  main.py  pyproject.toml  pyvenv.cfg  readme.md
python-code/2-llmRag/llm_utils/: __init__.py  llm_utils.py
python-code/2-llmRag/scripts/: preprocess_save.py
python-code/2-llmRag/scripts/vector_store_dir/: docs.pkl  faiss.index  index_to_docstore_id.pkl
python-code/3-simpleApi/: 3-simple-api.py  pyproject.toml  readme.md
python-code/mathUtils/: __init__.py  prints.py
